Fixed edit post not showing edit form - not styled

--- a/public/journal/main.css
+++ b/public/journal/main.css
@@ -116,7 +116,7 @@ input.valid:focus{
 		.linkSpan{ /*provides clickable link over 90% of post */
 			position: absolute;
 			width: 100%;
-			height: 90%;
+			height: 70%;
 			top: 0;
 			left: 0;
 			z-index: 1;
@@ -154,6 +154,8 @@ input.valid:focus{
 		.infoRow{ /*contains manipGroup, and expiryDate*/
 			position: relative;
 			padding-top: 2%;
+			
+			
 		}
 
 		.manipGroup { /*contains edit and delete buttons*/
@@ -226,6 +228,18 @@ input.valid:focus{
 		}
 	/***********************************/
 
+		/*Edit Post Styling*/
+	/***********************************/			
+
+		.editForm{
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			width: 100%;
+			background-color: white;
+		}
+
+	/***********************************/			
 
 		/*styling when no entries exist*/
 	/***********************************/			
@@ -278,6 +292,7 @@ input.valid:focus{
 			width: 80%;
 			border: 1px solid #ededf0;
 			border-bottom: 1px solid #dcdce0;
+			height: auto;
 		}
 
 		.linkSpan{ /*provides clickable link over 90% of post */
